# itmo_analysis

./: .gitignore  4.2.0  README.md  final.ipynb  pyproject.toml  requirements.txt
