[project]
name = "analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "polars>=1.32.2",
    "seaborn>=0.13.2",
    "lightgbm>=4.3.0",
    "scikit-learn>=1.4.1.post1",
    "ipykernel>=6.29.4",
]

